Fix layout issues

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -19,18 +19,18 @@
 }
 
 .leftPanel {
-    width: 30%;
+    flex: 3;
     display: flex;
     flex-direction: column;
 }
 
 .centerPanel {
-    width: 100%;
+    flex: 4;
     display: flex;
 }
 
 .rightPanel {
-    width: 30%;
+    flex: 3;
     display: flex;
     flex-direction: column;
 }
@@ -55,9 +55,8 @@
 
 .activityPanel {
     border: 1px solid black;
-    height: 612px;
     margin: 4px;
-    width: 100%;
+    flex-grow: 1;
 }
 
 .equipmentPanel {
@@ -82,7 +81,6 @@
     border: 1px solid black;
     height: 100px;
     margin: 4px;
-   //width: 100%;
 }
 
 footer {
